feat: 添加分销功能